--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="leftmenu">
             <div class="leftmenublock">
                 <div class="profile">
-                    <img src="/v-kittiphak.github.io/portfoliopic/profile.png"><br>
+                    <img src="/portfoliopic/profile.png"><br>
                     <span style="font-size: 1.1em;"><b>Kittphak Vichajaroenkul</b></span><br>
                     <span style="font-size: .8em; color: rgb(104, 104, 108);">Student</span><br>
                     <div class="contact">
